# telegram_bot_eurusd2rub

./: .gitignore  main.py  pyproject.toml
src/: apilayer_currency.json  apilayer_currency.py  cbr_xml_daily_ru.py  tele_bot.py
